[gd_scene load_steps=2 format=3 uid="uid://ijse7o3bbuu3"]

[ext_resource type="Script" path="res://Scripts/move_menu.gd" id="1_x4dl6"]

[node name="MoveMenu" type="Node2D"]
script = ExtResource("1_x4dl6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Move1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Move 1"

[node name="Move2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Move 2"

[connection signal="pressed" from="VBoxContainer/Move1" to="." method="_on_move_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Move2" to="." method="_on_move_2_pressed"]
